# raytrace

./: Cargo.toml  README.md  image.ppm
src/: camera.rs  main.rs  materials.rs
src/math/: mod.rs  ray.rs  shapes.rs  vec.rs
