[package]
name = "raytrace"
version = "0.1.0"
authors = ["Gurnek Singh <gurnekmokha96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.34", default-features = false }
rand = "0.7.3"
rayon = "1.6.1"

[profile.release]
strip=true
lto="fat"
panic="abort"
